crates/cruster/tests/ui/persisted_state_requires_serde.stderr
error[E0277]: the trait bound `BadState: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/persisted_state_requires_serde.rs:13:1
   |
13 | #[entity_impl]
   | ^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `BadState`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `BadState` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
note: required by a bound in `from_slice`
  --> $CARGO/rmp-serde-$VERSION/src/decode.rs
   |
   | pub fn from_slice<'a, T>(input: &'a [u8]) -> Result<T, Error>
   |        ---------- required by a bound in this function
   | where
   |     T: Deserialize<'a>,
   |        ^^^^^^^^^^^^^^^ required by this bound in `from_slice`
   = note: this error originates in the attribute macro `entity_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
